use raw property

--- a/ie8-decorator/html/defineProp.html
+++ b/ie8-decorator/html/defineProp.html
@@ -11,6 +11,7 @@ Object.defineProperty(cl, 'name', {
    get: function() {console.log('getter call');}
 })
 
+console.log('getOwnPropertyDescriptor = ' + Object.getOwnPropertyDescriptor(cl.prototype));
 cl.name = 'hoge';
 
 
