--- a/ie8-decorator/html/decorator-test.html
+++ b/ie8-decorator/html/decorator-test.html
@@ -8,6 +8,7 @@ var person = new Person();
 console.log('person = ' + person);
 console.log(person);
 	
+console.log("props = " + Object.getOwnPropertyNames(person));
 </script>
 </head>
 <body>
