fix property writable

--- a/ie8-decorator/html/decorator-test.html
+++ b/ie8-decorator/html/decorator-test.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="../dist/decorator.js"></script>
 <script type="text/javascript">
 var person = new Person();
+person.xxx = 'hoge';
 console.log('person = ' + person);
 console.log(person);
 	
